fixing overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,5 +32,7 @@
     margin: 0;
     height: 100%;
     min-width: 320px;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 }
